[project]
name = "infoplaca"
version = "0.0.0"
description = "A simple way to consult Brazilian vehicle license plates (placas)."
readme = "README.rst"

dependencies = [
    "httpx[http2]>=0.18.1,<1.0.0",
    # Using Amano's Pyrogram fork
    "pyrogram @ https://github.com/AmanoTeam/pyrogram/archive/master.zip",
    "tgcrypto",
]
requires-python = ">=3.7"

authors = [
    { name = "Amano LLC", email = "contact@amanoteam.com" }
]
license = { text = "MIT" }


[project.urls]
homepage = "https://github.com/AmanoTeam/InfoPlaca"

[tool.setuptools]
# Empty because the project is not a package
packages = []
